# llvm-ir-obfuscation

./: .gitignore  CMakeLists.txt  README.md
add/: AddOPass.cpp  CMakeLists.txt
checker/: CMakeLists.txt  CheckerTPass.cpp  checker.sh  cslot.py  cval.py  test.sh
cyclomatic/: CMakeLists.txt  CyclomaticA.cpp
flatten/: CMakeLists.txt  FlattenOPass.cpp  permute.c
ipred/: CMakeLists.txt  IPredOPass.cpp
merge/: CMakeLists.txt  MergeOPass.cpp
opaque/: CMakeLists.txt  OpaqueOPass.cpp
programs/c/: add.c  add2.c  fac.c  fib.c  loop.c  nestedfor.c  pow.c  prime_test.c  sum100.c  sum1to100.c  switch.c  twofunc.c
programs/ll/: add.ll  add2.ll  fac.ll  fib.ll  foo.ll  loop.ll  nestedfor.ll  phi.ll  pow.ll  prime_test.ll  sum100.ll  sum1to100.ll  switch.ll  twofunc.ll
water/: CMakeLists.txt  SplitWMPass.cpp  WMCheckerTPass.cpp  check_wm.sh  checker_wm.sh  cval_wm.py  extract_wm.py  extract_wm.sh  extractp_wm.py  insert_wm.sh  split_wm.py  splits  test.sh  water.sh
water/checker/: CMakeLists.txt
